--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,55 +1,129 @@
 body {
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #282c34;
-    color: #ffffff; /* Color de texto principal */
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #282c34;
+  color: #ffffff; /* Color de texto principal */
+}
+
+header {
+  background-color: #000000;
+  color: #ffffff;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.logo {
+  margin-bottom: 20px;
+}
+
+.logo img {
+  width: 100px;
+  height: auto;
+}
+
+.title {
+  font-size: 1.2em;
+  margin: 0;
+}
+
+main {
+  margin: 20px;
+}
+
+#intro {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.sensor, .statistic {
+  background-color: #61dafb;
+  border-radius: 5px;
+  padding: 20px;
+  margin-bottom: 30px; /* Aumenta este valor según sea necesario */
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  color: #282c34; /* Color de texto en sensor */
+  position: relative;
+}
+
+.sensor:before, .statistic:before {
+  content: '';
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  right: -5px;
+  bottom: -5px;
+  border-radius: 10px;
+  background: linear-gradient(to bottom right, #61dafb, #3299cc);
+  opacity: 0.3;
+  z-index: -1;
+}
+
+.placeholder {
+  font-size: 24px;
+  color: #282c34; /* Color de texto en placeholder */
+}
+
+.chart {
+  width: 100%; /* Ajusta este valor según sea necesario */
+  height: 300px; /* Ajusta este valor según sea necesario */
+}
+
+#charts .chart-placeholder {
+  background-color: #61dafb;
+  border-radius: 5px;
+  height: 200px;
+  line-height: 200px;
+  text-align: center;
+  color: #282c34; /* Color de texto en chart-placeholder */
+  margin-bottom: 20px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.chart-container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+  flex-wrap: wrap;
+}
+
+.chart-item {
+  width: 100%; /* Ajusta este valor según sea necesario */
+  background-color: #61dafb;
+  border-radius: 5px;
+  padding: 20px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  color: #282c34; /* Color de texto en chart-item */
+  margin-bottom: 20px;
+}
+
+.statistics-container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+  flex-wrap: wrap;
+}
+
+.statistics-subsection {
+  width: 100%; /* Ajusta este valor según sea necesario */
+  background-color: #61dafb;
+  border-radius: 5px;
+  padding: 20px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  color: #282c34; /* Color de texto en chart-item */
+  margin-bottom: 20px;
+}
+
+@media (min-width: 768px) {
+  .chart-item, .statistics-subsection {
+    width: 45%; /* Ajusta este valor según sea necesario */
   }
-  
-  main {
-    margin: 20px;
-  }
-  
-  .sensor, .statistic {
-    background-color: #61dafb;
-    border-radius: 5px;
-    padding: 20px;
-    margin-bottom: 30px; /* Aumenta este valor según sea necesario */
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    color: #282c34; /* Color de texto en sensor */
-    position: relative;
-  }
-  
-  .sensor:before, .statistic:before {
-    content: '';
-    position: absolute;
-    top: -5px;
-    left: -5px;
-    right: -5px;
-    bottom: -5px;
-    border-radius: 10px;
-    background: linear-gradient(to bottom right, #61dafb, #3299cc);
-    opacity: 0.3;
-    z-index: -1;
-  }
-  
-  .placeholder {
-    font-size: 24px;
-    color: #282c34; /* Color de texto en placeholder */
-  }
-  
-  #charts .chart-placeholder {
-    background-color: #61dafb;
-    border-radius: 5px;
-    height: 200px;
-    line-height: 200px;
-    text-align: center;
-    color: #282c34; /* Color de texto en chart-placeholder */
-    margin-bottom: 20px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-  }
-  
-  h1 {
-    margin: 0;
-  }
-  
+}
+
+.statistic {
+  margin-bottom: 20px;
+}
